# coursework-corp-sys

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md
examples/: sample.h
include/docgen/core/: DocumentationGenerator.h
include/docgen/filesystem/: FileIterator.h  FileScanner.h
include/docgen/generator/: AdvancedHtmlStrategy.h  GenerationStrategy.h  GenerationStrategyFactory.h  HtmlBuilder.h  SimpleHtmlStrategy.h
include/docgen/model/: ClassInfo.h  CodeEntity.h  DocumentationModel.h  FileDocumentation.h  FunctionInfo.h
include/docgen/observer/: GenerationSubject.h  IGenerationObserver.h
include/docgen/parser/: CppParser.h  HeaderParser.h  Parser.h  ParserFactory.h
include/docgen/utils/: StringUtils.h
src/: main.cpp
src/core/: DocumentationGenerator.cpp
src/filesystem/: FileIterator.cpp  FileScanner.cpp
src/generator/: AdvancedHtmlStrategy.cpp  GenerationStrategyFactory.cpp  HtmlBuilder.cpp  SimpleHtmlStrategy.cpp
src/observer/: GenerationSubject.cpp
src/parser/: CppParser.cpp  HeaderParser.cpp  ParserFactory.cpp
src/utils/: StringUtils.cpp
tests/: CMakeLists.txt  TEST_SCENARIOS.md  test_cpp_parser.cpp  test_documentation_generator.cpp  test_file_iterator.cpp  test_file_scanner.cpp  test_generation_strategy.cpp  test_helpers.h  test_html_builder.cpp  test_main.cpp  test_observer.cpp  test_parser_factory.cpp  test_string_utils.cpp
tests/minicatch2/catch2/: catch_session.hpp  catch_test_macros.hpp
tests/scenarios/: scenario_advanced_generation.cpp  scenario_empty_project.cpp  scenario_helpers.h  scenario_simple_generation.cpp  scenario_unsupported_files.cpp
